fix images on mobile

--- a/assets/styles/src/pages/_pay-suyool.scss
+++ b/assets/styles/src/pages/_pay-suyool.scss
@@ -149,7 +149,7 @@
         justify-content: center;
 
         img {
-          // height: 75%;
+          height: 100%;
           max-width: 750px;
         }
       }
